objects/Default_Text__c.object
<CustomObject>
    <fields>
        <fullName>Default_Text__c</fullName>
        <label>Default Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>User__c &amp; &apos;+&apos; &amp;  Warehouse__c &amp; &apos;+&apos; &amp;  Division__c &amp; &apos;+&apos; &amp;  Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <formula>IF(ISBLANK( Region__c ), 0, 1) + IF(ISBLANK( Division__c ), 0, 2) + IF(ISBLANK( Warehouse__c ), 0, 4) + IF(ISBLANK( User__c ), 0, 8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <label>Warehouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Default Text</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Division__c</columns>
        <columns>Warehouse__c</columns>
        <columns>User__c</columns>
        <columns>Default_Text__c</columns>
        <columns>Key__c</columns>
        <columns>Rank__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DT-{0000}</displayFormat>
        <label>Default Text Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>